fix(iot-serv): Fix charset bug in IotHubServiceSasToken
Calling String.valueOf may return "java.nio.charset.CharsetICU[UTF-8]" depending on java version, which causes an IllegalCharsetNameException.
Calling .name() instead solves the problem